add support for copying runtime dependencies to build folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,4 +31,15 @@ add_executable (sdl-gpu-tutorial "sdl-gpu-tutorial.cpp" "sdl-gpu-tutorial.h")
 target_link_libraries(sdl-gpu-tutorial PRIVATE fmt::fmt)
 target_link_libraries(sdl-gpu-tutorial PRIVATE  SDL3::SDL3)
 
+if(WIN32)
+    add_custom_command(
+        TARGET sdl-gpu-tutorial
+        POST_BUILD
+         COMMAND ${CMAKE_COMMAND} -E copy
+                $<TARGET_RUNTIME_DLLS:sdl-gpu-tutorial>
+                $<TARGET_FILE_DIR:sdl-gpu-tutorial>
+        COMMAND_EXPAND_LISTS # Important for handling multiple DLLs
+        COMMENT "Copying runtime DLLs for MyExecutable"
+    )
+endif()
 # TODO: Add tests and install targets if needed.
